// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/page/Header renders header correctly 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <withRouter(HeaderComponent)
    authenticated={false}
    user={
      Object {
        "email": "",
        "name": "",
        "username": "",
      }
    }
  >
    <Route>
      <HeaderComponent
        authenticated={false}
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "createHref": [Function],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          }
        }
        match={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/",
            "url": "/",
          }
        }
        user={
          Object {
            "email": "",
            "name": "",
            "username": "",
          }
        }
      >
        <div>
          <Navbar
            expand="md"
            light={true}
            tag="nav"
          >
            <nav
              className="navbar navbar-expand-md navbar-light"
            >
              <nav
                className="navbar navbar-expand-md navbar-light header-logo-navbar"
              >
                <Link
                  className="navbar-brand"
                  replace={false}
                  to="/"
                >
                  <a
                    className="navbar-brand"
                    href="/"
                    onClick={[Function]}
                  >
                    <img
                      alt="Reveal"
                      src="logo.png"
                    />
                  </a>
                </Link>
              </nav>
              <NavbarToggler
                onClick={[Function]}
                tag="button"
                type="button"
              >
                <button
                  className="navbar-toggler"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="navbar-toggler-icon"
                  />
                </button>
              </NavbarToggler>
              <Collapse
                appear={false}
                enter={true}
                exit={true}
                in={false}
                isOpen={false}
                mountOnEnter={false}
                navbar={true}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                tag="div"
                timeout={350}
                unmountOnExit={false}
              >
                <Transition
                  appear={false}
                  enter={true}
                  exit={true}
                  in={false}
                  mountOnEnter={false}
                  onEnter={[Function]}
                  onEntered={[Function]}
                  onEntering={[Function]}
                  onExit={[Function]}
                  onExited={[Function]}
                  onExiting={[Function]}
                  timeout={350}
                  unmountOnExit={false}
                >
                  <div
                    className="collapse navbar-collapse"
                    style={Object {}}
                  >
                    <Nav
                      className="mr-auto"
                      navbar={true}
                      tag="ul"
                      vertical={false}
                    >
                      <ul
                        className="mr-auto navbar-nav"
                      >
                        <NavItem
                          tag="li"
                        >
                          <li
                            className="nav-item"
                          >
                            <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="nav-link active"
                              to="/"
                            >
                              <Route
                                path="\\\\/"
                              >
                                <Link
                                  aria-current="page"
                                  className="nav-link active active"
                                  replace={false}
                                  style={Object {}}
                                  to="/"
                                >
                                  <a
                                    aria-current="page"
                                    className="nav-link active active"
                                    href="/"
                                    onClick={[Function]}
                                    style={Object {}}
                                  >
                                    Home
                                  </a>
                                </Link>
                              </Route>
                            </NavLink>
                          </li>
                        </NavItem>
                        <UncontrolledDropdown
                          inNavbar={true}
                          nav={true}
                        >
                          <Dropdown
                            active={false}
                            addonType={false}
                            direction="down"
                            inNavbar={true}
                            isOpen={false}
                            nav={true}
                            setActiveFromChild={false}
                            toggle={[Function]}
                          >
                            <Manager
                              className="dropdown nav-item"
                              onKeyDown={[Function]}
                              tag="li"
                            >
                              <li
                                className="dropdown nav-item"
                                onKeyDown={[Function]}
                              >
                                <DropdownToggle
                                  aria-haspopup={true}
                                  caret={true}
                                  className="nav-link"
                                  color="secondary"
                                  nav={true}
                                >
                                  <a
                                    aria-expanded={false}
                                    aria-haspopup={true}
                                    className="nav-link dropdown-toggle nav-link"
                                    href="#"
                                    onClick={[Function]}
                                  >
                                    Plan
                                  </a>
                                </DropdownToggle>
                                <DropdownMenu
                                  flip={true}
                                  right={true}
                                  tag="div"
                                >
                                  <div
                                    aria-hidden={true}
                                    className="dropdown-menu dropdown-menu-right"
                                    role="menu"
                                    tabIndex="-1"
                                  >
                                    <DropdownItem
                                      tag="button"
                                      toggle={true}
                                    >
                                      <button
                                        className="dropdown-item"
                                        onClick={[Function]}
                                        role="menuitem"
                                        tabIndex="0"
                                        type="button"
                                      >
                                        <NavLink
                                          activeClassName="active"
                                          aria-current="page"
                                          className="nav-link"
                                          to="/plans/list"
                                        >
                                          <Route
                                            path="\\\\/plans\\\\/list"
                                          >
                                            <Link
                                              aria-current={null}
                                              className="nav-link"
                                              replace={false}
                                              to="/plans/list"
                                            >
                                              <a
                                                aria-current={null}
                                                className="nav-link"
                                                href="/plans/list"
                                                onClick={[Function]}
                                              >
                                                Manage Plans
                                              </a>
                                            </Link>
                                          </Route>
                                        </NavLink>
                                      </button>
                                    </DropdownItem>
                                    <DropdownItem
                                      tag="button"
                                      toggle={true}
                                    >
                                      <button
                                        className="dropdown-item"
                                        onClick={[Function]}
                                        role="menuitem"
                                        tabIndex="0"
                                        type="button"
                                      >
                                        <NavLink
                                          activeClassName="active"
                                          aria-current="page"
                                          className="nav-link"
                                          to="/intervention/irs/drafts"
                                        >
                                          <Route
                                            path="\\\\/intervention\\\\/irs\\\\/drafts"
                                          >
                                            <Link
                                              aria-current={null}
                                              className="nav-link"
                                              replace={false}
                                              to="/intervention/irs/drafts"
                                            >
                                              <a
                                                aria-current={null}
                                                className="nav-link"
                                                href="/intervention/irs/drafts"
                                                onClick={[Function]}
                                              >
                                                IRS
                                              </a>
                                            </Link>
                                          </Route>
                                        </NavLink>
                                      </button>
                                    </DropdownItem>
                                  </div>
                                </DropdownMenu>
                              </li>
                            </Manager>
                          </Dropdown>
                        </UncontrolledDropdown>
                        <NavItem
                          tag="li"
                        >
                          <li
                            className="nav-item"
                          >
                            <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="nav-link"
                              to="/assign"
                            >
                              <Route
                                path="\\\\/assign"
                              >
                                <Link
                                  aria-current={null}
                                  className="nav-link"
                                  replace={false}
                                  to="/assign"
                                >
                                  <a
                                    aria-current={null}
                                    className="nav-link"
                                    href="/assign"
                                    onClick={[Function]}
                                  >
                                    Assign
                                  </a>
                                </Link>
                              </Route>
                            </NavLink>
                          </li>
                        </NavItem>
                        <UncontrolledDropdown
                          inNavbar={true}
                          nav={true}
                        >
                          <Dropdown
                            active={false}
                            addonType={false}
                            direction="down"
                            inNavbar={true}
                            isOpen={false}
                            nav={true}
                            setActiveFromChild={false}
                            toggle={[Function]}
                          >
                            <Manager
                              className="dropdown nav-item"
                              onKeyDown={[Function]}
                              tag="li"
                            >
                              <li
                                className="dropdown nav-item"
                                onKeyDown={[Function]}
                              >
                                <DropdownToggle
                                  aria-haspopup={true}
                                  caret={true}
                                  className="nav-link"
                                  color="secondary"
                                  nav={true}
                                >
                                  <a
                                    aria-expanded={false}
                                    aria-haspopup={true}
                                    className="nav-link dropdown-toggle nav-link"
                                    href="#"
                                    onClick={[Function]}
                                  >
                                    Monitor
                                  </a>
                                </DropdownToggle>
                                <DropdownMenu
                                  flip={true}
                                  right={true}
                                  tag="div"
                                >
                                  <div
                                    aria-hidden={true}
                                    className="dropdown-menu dropdown-menu-right"
                                    role="menu"
                                    tabIndex="-1"
                                  >
                                    <div>
                                      <DropdownItem
                                        tag="button"
                                        toggle={true}
                                      >
                                        <button
                                          className="dropdown-item"
                                          onClick={[Function]}
                                          role="menuitem"
                                          tabIndex="0"
                                          type="button"
                                        >
                                          <NavLink
                                            activeClassName="active"
                                            aria-current="page"
                                            className="nav-link"
                                            to="/focus-investigation"
                                          >
                                            <Route
                                              path="\\\\/focus-investigation"
                                            >
                                              <Link
                                                aria-current={null}
                                                className="nav-link"
                                                replace={false}
                                                to="/focus-investigation"
                                              >
                                                <a
                                                  aria-current={null}
                                                  className="nav-link"
                                                  href="/focus-investigation"
                                                  onClick={[Function]}
                                                >
                                                  Focus Investigation
                                                </a>
                                              </Link>
                                            </Route>
                                          </NavLink>
                                        </button>
                                      </DropdownItem>
                                    </div>
                                    <div>
                                      <DropdownItem
                                        tag="button"
                                        toggle={true}
                                      >
                                        <button
                                          className="dropdown-item"
                                          onClick={[Function]}
                                          role="menuitem"
                                          tabIndex="0"
                                          type="button"
                                        >
                                          <NavLink
                                            activeClassName="active"
                                            aria-current="page"
                                            className="nav-link"
                                            to="/intervention/irs/report"
                                          >
                                            <Route
                                              path="\\\\/intervention\\\\/irs\\\\/report"
                                            >
                                              <Link
                                                aria-current={null}
                                                className="nav-link"
                                                replace={false}
                                                to="/intervention/irs/report"
                                              >
                                                <a
                                                  aria-current={null}
                                                  className="nav-link"
                                                  href="/intervention/irs/report"
                                                  onClick={[Function]}
                                                >
                                                  IRS Reporting
                                                </a>
                                              </Link>
                                            </Route>
                                          </NavLink>
                                        </button>
                                      </DropdownItem>
                                    </div>
                                    <div>
                                      <DropdownItem
                                        tag="button"
                                        toggle={true}
                                      >
                                        <button
                                          className="dropdown-item"
                                          onClick={[Function]}
                                          role="menuitem"
                                          tabIndex="0"
                                          type="button"
                                        >
                                          <NavLink
                                            activeClassName="active"
                                            aria-current="page"
                                            className="nav-link"
                                            to="/intervention/mda-point/report"
                                          >
                                            <Route
                                              path="\\\\/intervention\\\\/mda-point\\\\/report"
                                            >
                                              <Link
                                                aria-current={null}
                                                className="nav-link"
                                                replace={false}
                                                to="/intervention/mda-point/report"
                                              >
                                                <a
                                                  aria-current={null}
                                                  className="nav-link"
                                                  href="/intervention/mda-point/report"
                                                  onClick={[Function]}
                                                >
                                                  MDA Point Reporting
                                                </a>
                                              </Link>
                                            </Route>
                                          </NavLink>
                                        </button>
                                      </DropdownItem>
                                    </div>
                                  </div>
                                </DropdownMenu>
                              </li>
                            </Manager>
                          </Dropdown>
                        </UncontrolledDropdown>
                        <UncontrolledDropdown
                          inNavbar={true}
                          nav={true}
                        >
                          <Dropdown
                            active={false}
                            addonType={false}
                            direction="down"
                            inNavbar={true}
                            isOpen={false}
                            nav={true}
                            setActiveFromChild={false}
                            toggle={[Function]}
                          >
                            <Manager
                              className="dropdown nav-item"
                              onKeyDown={[Function]}
                              tag="li"
                            >
                              <li
                                className="dropdown nav-item"
                                onKeyDown={[Function]}
                              >
                                <DropdownToggle
                                  aria-haspopup={true}
                                  caret={true}
                                  className="nav-link"
                                  color="secondary"
                                  nav={true}
                                >
                                  <a
                                    aria-expanded={false}
                                    aria-haspopup={true}
                                    className="nav-link dropdown-toggle nav-link"
                                    href="#"
                                    onClick={[Function]}
                                  >
                                    Admin
                                  </a>
                                </DropdownToggle>
                                <DropdownMenu
                                  flip={true}
                                  right={true}
                                  tag="div"
                                >
                                  <div
                                    aria-hidden={true}
                                    className="dropdown-menu dropdown-menu-right"
                                    role="menu"
                                    tabIndex="-1"
                                  >
                                    <DropdownItem
                                      tag="button"
                                      toggle={true}
                                    >
                                      <button
                                        className="dropdown-item"
                                        onClick={[Function]}
                                        role="menuitem"
                                        tabIndex="0"
                                        type="button"
                                      >
                                        <NavLink
                                          activeClassName="active"
                                          aria-current="page"
                                          className="nav-link"
                                          to="/teams"
                                        >
                                          <Route
                                            path="\\\\/teams"
                                          >
                                            <Link
                                              aria-current={null}
                                              className="nav-link"
                                              replace={false}
                                              to="/teams"
                                            >
                                              <a
                                                aria-current={null}
                                                className="nav-link"
                                                href="/teams"
                                                onClick={[Function]}
                                              >
                                                Teams
                                              </a>
                                            </Link>
                                          </Route>
                                        </NavLink>
                                      </button>
                                    </DropdownItem>
                                    <DropdownItem
                                      tag="button"
                                      toggle={true}
                                    >
                                      <button
                                        className="dropdown-item"
                                        onClick={[Function]}
                                        role="menuitem"
                                        tabIndex="0"
                                        type="button"
                                      >
                                        <NavLink
                                          activeClassName="active"
                                          aria-current="page"
                                          className="nav-link"
                                          to="/practitioners"
                                        >
                                          <Route
                                            path="\\\\/practitioners"
                                          >
                                            <Link
                                              aria-current={null}
                                              className="nav-link"
                                              replace={false}
                                              to="/practitioners"
                                            >
                                              <a
                                                aria-current={null}
                                                className="nav-link"
                                                href="/practitioners"
                                                onClick={[Function]}
                                              >
                                                Practitioners
                                              </a>
                                            </Link>
                                          </Route>
                                        </NavLink>
                                      </button>
                                    </DropdownItem>
                                    <DropdownItem
                                      tag="button"
                                      toggle={true}
                                    >
                                      <button
                                        className="dropdown-item"
                                        onClick={[Function]}
                                        role="menuitem"
                                        tabIndex="0"
                                        type="button"
                                      >
                                        <NavLink
                                          activeClassName="active"
                                          aria-current="page"
                                          className="nav-link"
                                          to="/404"
                                        >
                                          <Route
                                            path="\\\\/404"
                                          >
                                            <Link
                                              aria-current={null}
                                              className="nav-link"
                                              replace={false}
                                              to="/404"
                                            >
                                              <a
                                                aria-current={null}
                                                className="nav-link"
                                                href="/404"
                                                onClick={[Function]}
                                              >
                                                Users
                                              </a>
                                            </Link>
                                          </Route>
                                        </NavLink>
                                      </button>
                                    </DropdownItem>
                                  </div>
                                </DropdownMenu>
                              </li>
                            </Manager>
                          </Dropdown>
                        </UncontrolledDropdown>
                        <NavItem
                          tag="li"
                        >
                          <li
                            className="nav-item"
                          >
                            <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="nav-link"
                              to="/404"
                            >
                              <Route
                                path="\\\\/404"
                              >
                                <Link
                                  aria-current={null}
                                  className="nav-link"
                                  replace={false}
                                  to="/404"
                                >
                                  <a
                                    aria-current={null}
                                    className="nav-link"
                                    href="/404"
                                    onClick={[Function]}
                                  >
                                    About
                                  </a>
                                </Link>
                              </Route>
                            </NavLink>
                          </li>
                        </NavItem>
                      </ul>
                    </Nav>
                    <Nav
                      className="ml-0"
                      navbar={true}
                      tag="ul"
                      vertical={false}
                    >
                      <ul
                        className="ml-0 navbar-nav"
                      >
                        <NavLink
                          activeClassName="active"
                          aria-current="page"
                          className="nav-link"
                          to="/fe/login"
                        >
                          <Route
                            path="\\\\/fe\\\\/login"
                          >
                            <Link
                              aria-current={null}
                              className="nav-link"
                              replace={false}
                              to="/fe/login"
                            >
                              <a
                                aria-current={null}
                                className="nav-link"
                                href="/fe/login"
                                onClick={[Function]}
                              >
                                Login
                              </a>
                            </Link>
                          </Route>
                        </NavLink>
                      </ul>
                    </Nav>
                  </div>
                </Transition>
              </Collapse>
            </nav>
          </Navbar>
        </div>
      </HeaderComponent>
    </Route>
  </withRouter(HeaderComponent)>
</Router>
`;

exports[`components/page/Header renders header correctly when authenticated 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <withRouter(HeaderComponent)
    authenticated={true}
    user={
      Object {
        "email": "bob@example.com",
        "name": "Bobbie",
        "username": "RobertBaratheon",
      }
    }
  >
    <Route>
      <HeaderComponent
        authenticated={true}
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "createHref": [Function],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          }
        }
        match={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/",
            "url": "/",
          }
        }
        user={
          Object {
            "email": "bob@example.com",
            "name": "Bobbie",
            "username": "RobertBaratheon",
          }
        }
      >
        <div>
          <Navbar
            expand="md"
            light={true}
            tag="nav"
          >
            <nav
              className="navbar navbar-expand-md navbar-light"
            >
              <nav
                className="navbar navbar-expand-md navbar-light header-logo-navbar"
              >
                <Link
                  className="navbar-brand"
                  replace={false}
                  to="/"
                >
                  <a
                    className="navbar-brand"
                    href="/"
                    onClick={[Function]}
                  >
                    <img
                      alt="Reveal"
                      src="logo.png"
                    />
                  </a>
                </Link>
              </nav>
              <NavbarToggler
                onClick={[Function]}
                tag="button"
                type="button"
              >
                <button
                  className="navbar-toggler"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="navbar-toggler-icon"
                  />
                </button>
              </NavbarToggler>
              <Collapse
                appear={false}
                enter={true}
                exit={true}
                in={false}
                isOpen={false}
                mountOnEnter={false}
                navbar={true}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                tag="div"
                timeout={350}
                unmountOnExit={false}
              >
                <Transition
                  appear={false}
                  enter={true}
                  exit={true}
                  in={false}
                  mountOnEnter={false}
                  onEnter={[Function]}
                  onEntered={[Function]}
                  onEntering={[Function]}
                  onExit={[Function]}
                  onExited={[Function]}
                  onExiting={[Function]}
                  timeout={350}
                  unmountOnExit={false}
                >
                  <div
                    className="collapse navbar-collapse"
                    style={Object {}}
                  >
                    <Nav
                      className="mr-auto"
                      navbar={true}
                      tag="ul"
                      vertical={false}
                    >
                      <ul
                        className="mr-auto navbar-nav"
                      >
                        <NavItem
                          tag="li"
                        >
                          <li
                            className="nav-item"
                          >
                            <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="nav-link active"
                              to="/"
                            >
                              <Route
                                path="\\\\/"
                              >
                                <Link
                                  aria-current="page"
                                  className="nav-link active active"
                                  replace={false}
                                  style={Object {}}
                                  to="/"
                                >
                                  <a
                                    aria-current="page"
                                    className="nav-link active active"
                                    href="/"
                                    onClick={[Function]}
                                    style={Object {}}
                                  >
                                    Home
                                  </a>
                                </Link>
                              </Route>
                            </NavLink>
                          </li>
                        </NavItem>
                        <UncontrolledDropdown
                          inNavbar={true}
                          nav={true}
                        >
                          <Dropdown
                            active={false}
                            addonType={false}
                            direction="down"
                            inNavbar={true}
                            isOpen={false}
                            nav={true}
                            setActiveFromChild={false}
                            toggle={[Function]}
                          >
                            <Manager
                              className="dropdown nav-item"
                              onKeyDown={[Function]}
                              tag="li"
                            >
                              <li
                                className="dropdown nav-item"
                                onKeyDown={[Function]}
                              >
                                <DropdownToggle
                                  aria-haspopup={true}
                                  caret={true}
                                  className="nav-link"
                                  color="secondary"
                                  nav={true}
                                >
                                  <a
                                    aria-expanded={false}
                                    aria-haspopup={true}
                                    className="nav-link dropdown-toggle nav-link"
                                    href="#"
                                    onClick={[Function]}
                                  >
                                    Plan
                                  </a>
                                </DropdownToggle>
                                <DropdownMenu
                                  flip={true}
                                  right={true}
                                  tag="div"
                                >
                                  <div
                                    aria-hidden={true}
                                    className="dropdown-menu dropdown-menu-right"
                                    role="menu"
                                    tabIndex="-1"
                                  >
                                    <DropdownItem
                                      tag="button"
                                      toggle={true}
                                    >
                                      <button
                                        className="dropdown-item"
                                        onClick={[Function]}
                                        role="menuitem"
                                        tabIndex="0"
                                        type="button"
                                      >
                                        <NavLink
                                          activeClassName="active"
                                          aria-current="page"
                                          className="nav-link"
                                          to="/plans/list"
                                        >
                                          <Route
                                            path="\\\\/plans\\\\/list"
                                          >
                                            <Link
                                              aria-current={null}
                                              className="nav-link"
                                              replace={false}
                                              to="/plans/list"
                                            >
                                              <a
                                                aria-current={null}
                                                className="nav-link"
                                                href="/plans/list"
                                                onClick={[Function]}
                                              >
                                                Manage Plans
                                              </a>
                                            </Link>
                                          </Route>
                                        </NavLink>
                                      </button>
                                    </DropdownItem>
                                    <DropdownItem
                                      tag="button"
                                      toggle={true}
                                    >
                                      <button
                                        className="dropdown-item"
                                        onClick={[Function]}
                                        role="menuitem"
                                        tabIndex="0"
                                        type="button"
                                      >
                                        <NavLink
                                          activeClassName="active"
                                          aria-current="page"
                                          className="nav-link"
                                          to="/intervention/irs/drafts"
                                        >
                                          <Route
                                            path="\\\\/intervention\\\\/irs\\\\/drafts"
                                          >
                                            <Link
                                              aria-current={null}
                                              className="nav-link"
                                              replace={false}
                                              to="/intervention/irs/drafts"
                                            >
                                              <a
                                                aria-current={null}
                                                className="nav-link"
                                                href="/intervention/irs/drafts"
                                                onClick={[Function]}
                                              >
                                                IRS
                                              </a>
                                            </Link>
                                          </Route>
                                        </NavLink>
                                      </button>
                                    </DropdownItem>
                                  </div>
                                </DropdownMenu>
                              </li>
                            </Manager>
                          </Dropdown>
                        </UncontrolledDropdown>
                        <NavItem
                          tag="li"
                        >
                          <li
                            className="nav-item"
                          >
                            <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="nav-link"
                              to="/assign"
                            >
                              <Route
                                path="\\\\/assign"
                              >
                                <Link
                                  aria-current={null}
                                  className="nav-link"
                                  replace={false}
                                  to="/assign"
                                >
                                  <a
                                    aria-current={null}
                                    className="nav-link"
                                    href="/assign"
                                    onClick={[Function]}
                                  >
                                    Assign
                                  </a>
                                </Link>
                              </Route>
                            </NavLink>
                          </li>
                        </NavItem>
                        <UncontrolledDropdown
                          inNavbar={true}
                          nav={true}
                        >
                          <Dropdown
                            active={false}
                            addonType={false}
                            direction="down"
                            inNavbar={true}
                            isOpen={false}
                            nav={true}
                            setActiveFromChild={false}
                            toggle={[Function]}
                          >
                            <Manager
                              className="dropdown nav-item"
                              onKeyDown={[Function]}
                              tag="li"
                            >
                              <li
                                className="dropdown nav-item"
                                onKeyDown={[Function]}
                              >
                                <DropdownToggle
                                  aria-haspopup={true}
                                  caret={true}
                                  className="nav-link"
                                  color="secondary"
                                  nav={true}
                                >
                                  <a
                                    aria-expanded={false}
                                    aria-haspopup={true}
                                    className="nav-link dropdown-toggle nav-link"
                                    href="#"
                                    onClick={[Function]}
                                  >
                                    Monitor
                                  </a>
                                </DropdownToggle>
                                <DropdownMenu
                                  flip={true}
                                  right={true}
                                  tag="div"
                                >
                                  <div
                                    aria-hidden={true}
                                    className="dropdown-menu dropdown-menu-right"
                                    role="menu"
                                    tabIndex="-1"
                                  >
                                    <div>
                                      <DropdownItem
                                        tag="button"
                                        toggle={true}
                                      >
                                        <button
                                          className="dropdown-item"
                                          onClick={[Function]}
                                          role="menuitem"
                                          tabIndex="0"
                                          type="button"
                                        >
                                          <NavLink
                                            activeClassName="active"
                                            aria-current="page"
                                            className="nav-link"
                                            to="/focus-investigation"
                                          >
                                            <Route
                                              path="\\\\/focus-investigation"
                                            >
                                              <Link
                                                aria-current={null}
                                                className="nav-link"
                                                replace={false}
                                                to="/focus-investigation"
                                              >
                                                <a
                                                  aria-current={null}
                                                  className="nav-link"
                                                  href="/focus-investigation"
                                                  onClick={[Function]}
                                                >
                                                  Focus Investigation
                                                </a>
                                              </Link>
                                            </Route>
                                          </NavLink>
                                        </button>
                                      </DropdownItem>
                                    </div>
                                    <div>
                                      <DropdownItem
                                        tag="button"
                                        toggle={true}
                                      >
                                        <button
                                          className="dropdown-item"
                                          onClick={[Function]}
                                          role="menuitem"
                                          tabIndex="0"
                                          type="button"
                                        >
                                          <NavLink
                                            activeClassName="active"
                                            aria-current="page"
                                            className="nav-link"
                                            to="/intervention/irs/report"
                                          >
                                            <Route
                                              path="\\\\/intervention\\\\/irs\\\\/report"
                                            >
                                              <Link
                                                aria-current={null}
                                                className="nav-link"
                                                replace={false}
                                                to="/intervention/irs/report"
                                              >
                                                <a
                                                  aria-current={null}
                                                  className="nav-link"
                                                  href="/intervention/irs/report"
                                                  onClick={[Function]}
                                                >
                                                  IRS Reporting
                                                </a>
                                              </Link>
                                            </Route>
                                          </NavLink>
                                        </button>
                                      </DropdownItem>
                                    </div>
                                    <div>
                                      <DropdownItem
                                        tag="button"
                                        toggle={true}
                                      >
                                        <button
                                          className="dropdown-item"
                                          onClick={[Function]}
                                          role="menuitem"
                                          tabIndex="0"
                                          type="button"
                                        >
                                          <NavLink
                                            activeClassName="active"
                                            aria-current="page"
                                            className="nav-link"
                                            to="/intervention/mda-point/report"
                                          >
                                            <Route
                                              path="\\\\/intervention\\\\/mda-point\\\\/report"
                                            >
                                              <Link
                                                aria-current={null}
                                                className="nav-link"
                                                replace={false}
                                                to="/intervention/mda-point/report"
                                              >
                                                <a
                                                  aria-current={null}
                                                  className="nav-link"
                                                  href="/intervention/mda-point/report"
                                                  onClick={[Function]}
                                                >
                                                  MDA Point Reporting
                                                </a>
                                              </Link>
                                            </Route>
                                          </NavLink>
                                        </button>
                                      </DropdownItem>
                                    </div>
                                  </div>
                                </DropdownMenu>
                              </li>
                            </Manager>
                          </Dropdown>
                        </UncontrolledDropdown>
                        <UncontrolledDropdown
                          inNavbar={true}
                          nav={true}
                        >
                          <Dropdown
                            active={false}
                            addonType={false}
                            direction="down"
                            inNavbar={true}
                            isOpen={false}
                            nav={true}
                            setActiveFromChild={false}
                            toggle={[Function]}
                          >
                            <Manager
                              className="dropdown nav-item"
                              onKeyDown={[Function]}
                              tag="li"
                            >
                              <li
                                className="dropdown nav-item"
                                onKeyDown={[Function]}
                              >
                                <DropdownToggle
                                  aria-haspopup={true}
                                  caret={true}
                                  className="nav-link"
                                  color="secondary"
                                  nav={true}
                                >
                                  <a
                                    aria-expanded={false}
                                    aria-haspopup={true}
                                    className="nav-link dropdown-toggle nav-link"
                                    href="#"
                                    onClick={[Function]}
                                  >
                                    Admin
                                  </a>
                                </DropdownToggle>
                                <DropdownMenu
                                  flip={true}
                                  right={true}
                                  tag="div"
                                >
                                  <div
                                    aria-hidden={true}
                                    className="dropdown-menu dropdown-menu-right"
                                    role="menu"
                                    tabIndex="-1"
                                  >
                                    <DropdownItem
                                      tag="button"
                                      toggle={true}
                                    >
                                      <button
                                        className="dropdown-item"
                                        onClick={[Function]}
                                        role="menuitem"
                                        tabIndex="0"
                                        type="button"
                                      >
                                        <NavLink
                                          activeClassName="active"
                                          aria-current="page"
                                          className="nav-link"
                                          to="/teams"
                                        >
                                          <Route
                                            path="\\\\/teams"
                                          >
                                            <Link
                                              aria-current={null}
                                              className="nav-link"
                                              replace={false}
                                              to="/teams"
                                            >
                                              <a
                                                aria-current={null}
                                                className="nav-link"
                                                href="/teams"
                                                onClick={[Function]}
                                              >
                                                Teams
                                              </a>
                                            </Link>
                                          </Route>
                                        </NavLink>
                                      </button>
                                    </DropdownItem>
                                    <DropdownItem
                                      tag="button"
                                      toggle={true}
                                    >
                                      <button
                                        className="dropdown-item"
                                        onClick={[Function]}
                                        role="menuitem"
                                        tabIndex="0"
                                        type="button"
                                      >
                                        <NavLink
                                          activeClassName="active"
                                          aria-current="page"
                                          className="nav-link"
                                          to="/practitioners"
                                        >
                                          <Route
                                            path="\\\\/practitioners"
                                          >
                                            <Link
                                              aria-current={null}
                                              className="nav-link"
                                              replace={false}
                                              to="/practitioners"
                                            >
                                              <a
                                                aria-current={null}
                                                className="nav-link"
                                                href="/practitioners"
                                                onClick={[Function]}
                                              >
                                                Practitioners
                                              </a>
                                            </Link>
                                          </Route>
                                        </NavLink>
                                      </button>
                                    </DropdownItem>
                                    <DropdownItem
                                      tag="button"
                                      toggle={true}
                                    >
                                      <button
                                        className="dropdown-item"
                                        onClick={[Function]}
                                        role="menuitem"
                                        tabIndex="0"
                                        type="button"
                                      >
                                        <NavLink
                                          activeClassName="active"
                                          aria-current="page"
                                          className="nav-link"
                                          to="/404"
                                        >
                                          <Route
                                            path="\\\\/404"
                                          >
                                            <Link
                                              aria-current={null}
                                              className="nav-link"
                                              replace={false}
                                              to="/404"
                                            >
                                              <a
                                                aria-current={null}
                                                className="nav-link"
                                                href="/404"
                                                onClick={[Function]}
                                              >
                                                Users
                                              </a>
                                            </Link>
                                          </Route>
                                        </NavLink>
                                      </button>
                                    </DropdownItem>
                                  </div>
                                </DropdownMenu>
                              </li>
                            </Manager>
                          </Dropdown>
                        </UncontrolledDropdown>
                        <NavItem
                          tag="li"
                        >
                          <li
                            className="nav-item"
                          >
                            <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="nav-link"
                              to="/404"
                            >
                              <Route
                                path="\\\\/404"
                              >
                                <Link
                                  aria-current={null}
                                  className="nav-link"
                                  replace={false}
                                  to="/404"
                                >
                                  <a
                                    aria-current={null}
                                    className="nav-link"
                                    href="/404"
                                    onClick={[Function]}
                                  >
                                    About
                                  </a>
                                </Link>
                              </Route>
                            </NavLink>
                          </li>
                        </NavItem>
                      </ul>
                    </Nav>
                    <Nav
                      className="ml-0"
                      navbar={true}
                      tag="ul"
                      vertical={false}
                    >
                      <ul
                        className="ml-0 navbar-nav"
                      >
                        <UncontrolledDropdown
                          inNavbar={true}
                          nav={true}
                        >
                          <Dropdown
                            active={false}
                            addonType={false}
                            direction="down"
                            inNavbar={true}
                            isOpen={false}
                            nav={true}
                            setActiveFromChild={false}
                            toggle={[Function]}
                          >
                            <Manager
                              className="dropdown nav-item"
                              onKeyDown={[Function]}
                              tag="li"
                            >
                              <li
                                className="dropdown nav-item"
                                onKeyDown={[Function]}
                              >
                                <DropdownToggle
                                  aria-haspopup={true}
                                  caret={true}
                                  color="secondary"
                                  nav={true}
                                >
                                  <a
                                    aria-expanded={false}
                                    aria-haspopup={true}
                                    className="dropdown-toggle nav-link"
                                    href="#"
                                    onClick={[Function]}
                                  >
                                    <FontAwesomeIcon
                                      border={false}
                                      className=""
                                      fixedWidth={false}
                                      flip={null}
                                      icon={
                                        Array [
                                          "far",
                                          "user",
                                        ]
                                      }
                                      inverse={false}
                                      listItem={false}
                                      mask={null}
                                      pull={null}
                                      pulse={false}
                                      rotation={null}
                                      size={null}
                                      spin={false}
                                      swapOpacity={false}
                                      symbol={false}
                                      title=""
                                      transform={null}
                                    >
                                      <svg
                                        aria-hidden="true"
                                        className="svg-inline--fa fa-user fa-w-14 "
                                        data-icon="user"
                                        data-prefix="far"
                                        focusable="false"
                                        role="img"
                                        style={Object {}}
                                        viewBox="0 0 448 512"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
                                          fill="currentColor"
                                          style={Object {}}
                                        />
                                      </svg>
                                    </FontAwesomeIcon>
                                     
                                    RobertBaratheon
                                  </a>
                                </DropdownToggle>
                                <DropdownMenu
                                  flip={true}
                                  right={true}
                                  tag="div"
                                >
                                  <div
                                    aria-hidden={true}
                                    className="dropdown-menu dropdown-menu-right"
                                    role="menu"
                                    tabIndex="-1"
                                  >
                                    <DropdownItem
                                      tag="button"
                                      toggle={true}
                                    >
                                      <button
                                        className="dropdown-item"
                                        onClick={[Function]}
                                        role="menuitem"
                                        tabIndex="0"
                                        type="button"
                                      >
                                        <NavLink
                                          activeClassName="active"
                                          aria-current="page"
                                          className="nav-link"
                                          to="/logout"
                                        >
                                          <Route
                                            path="\\\\/logout"
                                          >
                                            <Link
                                              aria-current={null}
                                              className="nav-link"
                                              replace={false}
                                              to="/logout"
                                            >
                                              <a
                                                aria-current={null}
                                                className="nav-link"
                                                href="/logout"
                                                onClick={[Function]}
                                              >
                                                Sign Out
                                              </a>
                                            </Link>
                                          </Route>
                                        </NavLink>
                                      </button>
                                    </DropdownItem>
                                  </div>
                                </DropdownMenu>
                              </li>
                            </Manager>
                          </Dropdown>
                        </UncontrolledDropdown>
                      </ul>
                    </Nav>
                  </div>
                </Transition>
              </Collapse>
            </nav>
          </Navbar>
        </div>
      </HeaderComponent>
    </Route>
  </withRouter(HeaderComponent)>
</Router>
`;
